--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>C.V OF MD.RAHIM</title>
 <head>
+     <a href="../Login.html">Login here</a>
+        <a href="./Register.html">Create account</a>
+        <a href="./Forget pass.html">Reset password</a>
     <h1>C.V OF Md.Rahim</h1>
 <img src="./img/1.jpg" alt="cow image" height="200" width="200" align="center"/></head>
 <body></body>
